# GBFR-chatterbox

./: .gitattributes  .gitignore  BUILDING.md  EXPERIMENTS.md  LICENSE  README.md  THIRD-PARTY-LICENSES.md  TRANSCRIBING.md  pyproject.toml  reapply.bat  run.bat  serve.py
chatterbox/: __init__.py  app.py  banks.py  characters.json  game.py  library.py  patching.py  pck.py  siero.py  silence.wem  store.py  ui.html  web.py
data/: README.md
data/per-character/: pl0000.json  pl0100.json  pl0200.json  pl0300.json  pl0400.json  pl0500.json  pl0600.json  pl0700.json  pl0800.json  pl0900.json  pl1000.json  pl1100.json  pl1200.json  pl1300.json  pl1400.json  pl1500.json  (+13 more)
data/per-character-jp/: pl0000.json  pl0100.json  pl0200.json  pl0300.json  pl0400.json  pl0500.json  pl0600.json  pl0700.json  pl0800.json  pl0900.json  pl1000.json  pl1100.json  pl1200.json  pl1300.json  pl1400.json  pl1500.json  pl1600.json  pl1700.json  pl1800.json  pl1900.json  pl2100.json  pl2200.json  pl2300.json  pl2400.json  pl2500.json  pl2600.json  pl2700.json  pl2800.json  pl2900.json
dev/: EXPERIMENTS.md  PERSONAS.md  apply_corrections.py  asr_compare.py  build_atlas.py  build_exemplars.py  build_full_atlas.py  build_release.py  build_subtitles.py  cloud_check.py  cloud_gauntlet.py  consensus.py  corrections.json  ensemble.py  eval_truth.py  exemplars.json  expand_atlas.py  glossary.json  jp_bake.py  jp_probe.py  rebake_partners.py  refine.py  regrunt.py  requirements-dev.txt  rerun_fediel.py  rescore.py  retranscribe.py  serve_qwen3asr.sh  serve_qwen3omni.sh  serve_qwen3omni_awq.sh  smoke_clips.json  smoke_qwen3omni.py  test_persona.py  test_refine_truth.py
tests/: test_backup.py  test_banks.py  test_siero.py  test_smoke.py  test_transcribe.py
transcribe/: __init__.py  __main__.py  asr.py  audio.py  bake.py  context.py  corrections.json  corrections.py  ensemble.py  evaluate.py  exemplars.json  glossary-jp.json  glossary.json  omni.py  races.json  rescore.py  truth.json
