[project]
name = "gbfr-chatterbox"
version = "0.1.0"
description = "Mute, swap and browse GBFR voice lines from your own game install"
requires-python = ">=3.11"
dependencies = []   # runtime is standard library only

[project.optional-dependencies]
# only for rebuilding the dataset from scratch (dev/build_full_atlas.py)
transcribe = ["faster-whisper>=1.0"]

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chatterbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["chatterbox"]

[tool.coverage.report]
fail_under = 70
show_missing = true
